--- a/template/licencia.html
+++ b/template/licencia.html
@@ -5,6 +5,7 @@
 		<?php include "cabecera.php" ?>
 		<div class="content licencia"> 
 			<h1>LICENCIA</h1>
+			<p><em>Agradecemos a la Oficina Web y al CSIRC su ayuda para el desarrollo de esta aplicación</em></p>
 			<p><em>Copyright 2009-2024 Allan Psicobyte, Alejandro Machuca</em>, para la <a href="https://osl.ugr.es/">Oficina de Software Libre de la Universidad de Granada</a>.</p>
 			<p>Este software se distribuye bajo una licencia pública <a href="https://www.affero.org/oagpl.html">Affero GPL</a>. Puedes descargarlo libremente en su <a href="https://github.com/OSL-UGR/slugerV2">página de GitHub</a>.</p>
 				<div class="navega">
