Arreglados algunos errores por @Alux6 en el servidor. Actualizada whitelist.txt y cambiada carpeta CSS a css.

--- a/template/error.html
+++ b/template/error.html
@@ -7,7 +7,7 @@
 			<h1>Acortador de enlaces</h1>
 			<div id="centro" class="contenedor">
 				<p>OOOPS!</p>
-				<p><? echo $TextoError; ?></p>
+				<p><?php echo $TextoError; ?></p>
 				</form>
 			</div>
 			<div class="navega">
